# zt_global_elemapping

./: readme.md  笔记.txt
src/global_elevation_mapping/: CMakeLists.txt  package.xml
src/global_elevation_mapping/launch/: global_mapping_online.launch  global_mapping_online_pub.launch  global_mapping_underline.launch
src/global_elevation_mapping/scripts/: 01local_map_data_underline.py  02global_map_fusion_underline.py  03txt_to_gray_cut-1.py  global_map_fusion_k_online.py  global_map_fusion_k_online_pub.py
src/global_elevation_mapping/scripts_backup/: odom_to_tf.py  view_npz.py
src/global_elevation_mapping/srv/: SaveMap.srv
src/global_elevation_mapping/utils/: 01map_cut.py  02too_small_map.py  image_info.py  resize_to_half.py  txt_to_gray.py  txt_to_gray_cut.py  visualize_3d_elevation_png.py  visualize_3d_elevation_txt.py
